--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   lucide_icons: ^0.257.0
   flutter_animate: ^4.5.0
   iconsax: ^0.0.8
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
