--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   iconsax: ^0.0.8
   firebase_core: ^3.8.0
   cloud_firestore: ^5.4.4
+  firebase_auth: ^5.3.0
 
 dev_dependencies:
   flutter_test:
