--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_core: ^3.8.0
   cloud_firestore: ^5.4.4
   firebase_auth: ^5.3.0
+  provider: ^6.1.1 # Gunakan versi terbaru yang stabil
+  intl: ^0.18.1    # Gunakan versi terbaru yang stabil
 
 dev_dependencies:
   flutter_test:
