--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^5.3.0
   provider: ^6.1.1 # Gunakan versi terbaru yang stabil
   intl: ^0.18.1    # Gunakan versi terbaru yang stabil
+  syncfusion_flutter_charts: ^26.1.40
 
 dev_dependencies:
   flutter_test:
