--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   lucide_icons: ^0.257.0
   flutter_animate: ^4.5.0
   iconsax: ^0.0.8
@@ -23,14 +25,16 @@ dependencies:
   geolocator: ^13.0.2
   http: ^1.1.0
   provider: ^6.1.1 # Gunakan versi terbaru yang stabil
-  intl: ^0.18.1    # Gunakan versi terbaru yang stabil
-  syncfusion_flutter_charts: ^26.1.40
+  intl: ^0.20.2 # Gunakan versi terbaru yang stabil
+  syncfusion_flutter_charts: ^31.2.12
   shimmer: ^3.0.0
+  pdf: ^3.11.0
+  printing: ^5.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
 flutter:
   uses-material-design: true
+
